<resources>
    <string name="app_name">InstagramClone</string>

    <!--    Default toolbar strings-->
    <string name="toolbar_title">Instagram</string>

    <!--    Feed item strings-->
    <string name="view_all_comments">View all comments</string>

    <!--    Dummy text-->
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>

    <!--    Registration hints-->
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Don\'t have and account? Register here</string>
    <string name="register_sign_up">Sign up</string>

    <!--    Login-->
    <string name="login">Log In</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!--    AddPost-->
    <string name="caption">Write a caption...</string>
    <string name="location">Select Location</string>
    <string name="new_post">New Post</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    Edit profile-->
    <string name="edit_profile_avatar">Change profile photo</string>

    <!--    Snackbar-->
    <string name="success_deleted">Image deleted successfully</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
