<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/edit_toolbar.wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/edit_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/edit_profile_toolbar_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/toolbar_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp" />

                <ImageView
                    android:id="@+id/edit_profile_toolbar_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_done_black_24dp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/edit_profile_avatar_wrap"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_below="@+id/edit_toolbar.wrap"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginVertical="12dp"
        app:cardCornerRadius="100dp">

        <ImageView
            android:id="@+id/edit_profile_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/edit_avatar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_profile_avatar_wrap"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12sp"
        android:text="@string/edit_profile_avatar"
        android:textColor="@color/cta_blue"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/edit_text_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_avatar_text"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/full_name"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorGray" />

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/username"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorGray" />

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="Bio"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorGray" />

    </LinearLayout>

</RelativeLayout>